# PcolorTool

./: CMakeLists.txt  LICENSE  README.md
PcTool/: CMakeLists.txt  main.cpp  precomp.h
PcTool/cfg/: sample.txt
PcTool/data/: PcAlg.h  PcData.h
PcTool/window/: MainWindow.h
others/ETL/include/imp/: ImageData.h
others/ETL/include/ui/: ImageCtrl.h
