CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE("others/ETL/include/msvc.cmk")

PROJECT(PcolorTool)

SET_ETL_PATH("${PROJECT_SOURCE_DIR}/others/ETL")

ADD_SUBDIRECTORY(PcTool PcTool)

#pack
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")

SET(CPACK_PACKAGE_NAME "PcolorTool")

SET(CPACK_PACKAGE_VENDER "ZJU")

SET(CPACK_PACKAGE_DIRECTORY "${PROJECT_BINARY_DIR}/_pack")

SET(CPACK_PACKAGE_VERSION_MAJOR "1")

SET(CPACK_PACKAGE_VERSION_MINOR "0")

SET(CPACK_PACKAGE_VERSION_PATCH "0")

INCLUDE(CPack)

#end
